--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,11 @@ dependencies {
 
     implementation "androidx.navigation:navigation-compose:2.4.2"
 
+    implementation "com.beepiz.blegattcoroutines:blegattcoroutines-core:0.5.0"
+    implementation "com.beepiz.blegattcoroutines:blegattcoroutines-genericaccess:0.5.0"
+
+    implementation "com.louiscad.splitties:splitties-systemservices:3.0.0"
+    implementation "com.louiscad.splitties:splitties-bitflags:3.0.0"
+
+
 }
