create view models

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -87,4 +88,9 @@ dependencies {
     implementation "com.louiscad.splitties:splitties-bitflags:3.0.0"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+
+    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
 }
