--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    implementation "com.google.accompanist:accompanist-permissions:0.23.1"
 }
